--- a/css/estilosbem.css
+++ b/css/estilosbem.css
@@ -1,10 +1,9 @@
 /*BLOQUE BEM NAVEGADOR*/
 .navegador {
-  margin-top: 30px;
-  margin-bottom: 10px;
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-around; }
+  height: min-content;
+  margin-top: 55px;
+  box-shadow: 0 0 10px #1d1d1d;
+  padding: 0%; }
   .navegador__lista {
     list-style-type: none;
     display: flex;
